--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,10 +1,4 @@
 ---
-- name: ensure apt cache is up to date
-  apt: update_cache=yes
-  tags:
-    - backuppc
-    - packages
-
 # Software installation
 - name: ensure packages are installed
   apt: pkg={{item}}
@@ -80,7 +74,7 @@
     dest=/etc/backuppc/config.pl
     backrefs=yes
     regexp="^\\$Conf{TarClientCmd}"
-    line="$Conf{TarClientCmd} = '$sshPath -q -x -n -l backuppc $host env LC_ALL=C $tarPath -c -v -f - -C $shareName+ --totals';"
+    line="$Conf{TarClientCmd} = '$sshPath -q -x -n -l backuppc $host'"
   tags:
     - backuppc
     - configuration
@@ -90,7 +84,7 @@
     dest=/etc/backuppc/config.pl
     backrefs=yes
     regexp="^\\$Conf{TarClientRestoreCmd}"
-    line="$Conf{TarClientRestoreCmd} = '$sshPath -q -x -l backuppc $host env LC_ALL=C $tarPath -x -p --numeric-owner --same-owner -v -f - -C $shareName+';"
+    line="$Conf{TarClientRestoreCmd} = '$sshPath -q -x -l backuppc $host'"
   tags:
     - backuppc
     - configuration
