Adjustments from vagrant test deployments

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,5 +1,6 @@
 ---
 backuppc_domain: 'localhost'
+backuppc_email_domain: 'newedgeengineering.com'
 backuppc_hosts: [] # contains a list of: name, os and type (also optional ip_address and key) attributes.
 backuppc_users:
   -
