adjust default values and do some doku

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,8 +1,9 @@
 ---
 backuppc_domain: 'localhost'
 backuppc_email_domain: 'newedgeengineering.com'
-backuppc_hosts: [] # contains a list of: name, os and type (also optional ip_address and key) attributes.
+backuppc_hosts: [] # contains a list of: name, os and type (also optional contact and user) attributes.
+# backuppc_hosts: [name: 'host', os: 'linux', type: 'rsync', contact: 'backuppc', user: 'user1 user2']
 backuppc_users:
   -
-    name: admin
+    name: backuppc
     pass: admin
