email_from_username variable

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,5 +1,6 @@
 ---
 backuppc_domain: 'localhost'
+backuppc_email_from_username: 'user@newedgeengineering.com'
 backuppc_email_domain: 'newedgeengineering.com'
 backuppc_hosts: [] # contains a list of: name, os and type (also optional contact and user) attributes.
 # backuppc_hosts: [name: 'host', os: 'linux', type: 'rsync', contact: 'backuppc', user: 'user1 user2']
