add Vagrant testing

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,9 +1,15 @@
 ---
+backuppc_url: 'http://localhost'
 backuppc_domain: 'localhost'
-backuppc_email_from_username: 'user@newedgeengineering.com'
 backuppc_email_domain: 'newedgeengineering.com'
-backuppc_hosts: [] # contains a list of: name, os and type (also optional contact and user) attributes.
+backuppc_email_from_username: 'user@newedgeengineering.com'
+
+# contains a list of: name, os and type (also optional contact and user) attributes.
 # backuppc_hosts: [name: 'host', os: 'linux', type: 'rsync', contact: 'backuppc', user: 'user1 user2']
+backuppc_hosts: [
+    { name: 'localhost', os: 'linux', type: 'rsync', user: 'backuppc'}
+]
+
 backuppc_users:
   -
     name: backuppc
