--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,6 +1,6 @@
 ---
 - name: restart backuppc
-  service: name=backuppc state=restarted
-
-- name: restart apache2
-  service: name=apache2 state=restarted
+  service:
+    name: backuppc
+    enabled: yes
+    state: restarted
