fix web-group for centos7

--- a/tasks/config_hosts.yml
+++ b/tasks/config_hosts.yml
@@ -2,10 +2,10 @@
 - name: create hosts inventory file
   template:
     src: hosts.j2
-    dest: '/etc/backuppc/hosts'
+    dest: '/etc/{{ backuppc_directory }}/hosts'
     mode: 'u=rw,g=r,o=r'
     owner: 'backuppc'
-    group: 'www-data'
+    group: "{{ backuppc_web_group }}"
     backup: yes
   notify:
     - restart backuppc
@@ -16,13 +16,13 @@
 
 - name: create hosts configuration
   template:
-    dest: "/etc/backuppc/{{ item.name }}.pl"
+    dest: "/etc/{{ backuppc_directory }}/{{ item.name }}.pl"
     src: "backuppc-{{ item.os }}-{{ item.type }}.j2"
-    mode: "u=rw,g=r,o="
-    owner: "backuppc"
-    group: "www-data"
+    mode: 'u=rw,g=r,o='
+    owner: 'backuppc'
+    group: "{{ backuppc_web_group }}"
     force: no
-  with_items: "{{ backuppc_hosts }}"
+  with_items: '{{ backuppc_hosts }}'
   notify:
     - restart backuppc
   tags:
@@ -33,8 +33,14 @@
 - name: copy hosts specific configuration file
   copy:
     src: 'hostconfig/'
-    dest: '/etc/backuppc/'
-    mode: "u=rw,g=r,o="
-    owner: "backuppc"
-    group: "www-data"
+    dest: "/etc/{{ backuppc_directory }}/"
+    mode: 'u=rw,g=r,o='
+    owner: 'backuppc'
+    group: "{{ backuppc_web_group }}"
+  notify:
+    - restart backuppc
+  tags:
+    - backuppc
+    - configuration
+    - clients
 
